kubernetes/argo-cd/projects/aws/production-hm/litellm/environments/production/kubernetes-manifests/hm-litellm-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hm-litellm-deployment
  namespace: production-hm-litellm
  labels:
    app.kubernetes.io/name: litellm
    app.kubernetes.io/part-of: production-hm-litellm
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: litellm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: litellm
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: hm-litellm-service-account
      containers:
        - name: litellm
          image: harbor.hongbomiao.com/docker-hub-proxy-cache/litellm/litellm:v1.79.0-stable
          securityContext:
            # runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - name: litellm
              protocol: TCP
              containerPort: 4000
          command: ["litellm", "--port", "4000", "--config", "/app/config.yaml"]
          volumeMounts:
            - name: litellm-volume
              mountPath: /app/config.yaml
              subPath: config.yaml
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              memory: 1Gi
      volumes:
        - name: litellm-volume
          configMap:
            name: hm-litellm-config-map
