kubernetes/argo-cd/projects/aws/production-hm/litellm/environments/production/kubernetes-manifests/hm-litellm-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-litellm-ingress
  namespace: production-hm-litellm
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: litellm.hongbomiao.com
  labels:
    app.kubernetes.io/name: litellm
    app.kubernetes.io/part-of: production-hm-litellm
spec:
  rules:
    - host: litellm.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-litellm-service
                port:
                  number: 80
  tls:
    - hosts:
        - litellm.hongbomiao.com
      secretName: hm-litellm-certificate
